--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -12,16 +12,16 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark ">
-        <a class="navbar-brand text-white" href="#">Shop.Com</a>
+        <a class="navbar-brand text-white" href="#">MyPortfolio.Com</a>
         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon "></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active text-white" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link text-white" href="#">Features</a>
+            <a class="nav-item nav-link active text-white" href="">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link text-white" href="#">About</a>
-            <a class="nav-item nav-link text-white" href="#">Contact Us</a>
+            <a class="nav-item nav-link text-white" href="#">Projects</a>
+            <a class="nav-item nav-link text-white" href="#">Contact Me</a>
             <a class="nav-item nav-link disabled text-secondary" href="#">Coming Soon</a>
             
           </div>
@@ -32,34 +32,14 @@
         </div>
         
     </nav>
-    <!-- <nav class="d-flex justify-content-between" id="js-navbar-toggle">
-        <span class="navbar-toggle" onclick="toggleFunction1(event)">
-                <i class="fas fa-bars" ></i>
-        </span>
-        <a class="logo" href="#">Shop.Com</a>
-        <ul class="main-nav align-self-center m-0 mr-2" >
-            <li>
-                <a class="nav-links px-2" href="#">Home</a>
-            </li>
-            <li>
-                <a class="nav-links px-2" href="#">Features</a>
-            </li>
-            <li>
-                <a class="nav-links px-2" href="#">About</a>
-            </li>
-            <li>
-                <a class="nav-links px-2" href="#">Contact Us</a>
-            </li>
-            <li>
-                <a class="nav-links px-2" href="#">Wait</a>
-            </li>
-        </ul>
-        <div class="SignInAndUp align-self-center m-0 ">
-            <a class="mr-2 px-3" href="#">Sign In</a>
-            <a class="px-3"href="#">Sign Up</a>
-        </div>
-    </nav> -->
-    <script src="{% static 'js/toggler.js' %}"></script>
+    <div class="bg-image" style="background-image: url('../../../static/images/background.jpg');">
+        <div class="d-flex justify-content-center align-items-center h-100">
+            <div class=" text-white">
+              <h1 class="mb-3">Hi I'm Manav Chauhan</h1>
+              <h5 class="mb-4">A computer science student passionate about programming and design.</h5>
+              <a class="btn btn-outline-light btn-lg m-2">My Projects</a>
+              <a class="btn btn-outline-light btn-lg m-2">Contact Me</a>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
