--- a/store/templates/home/home.html
+++ b/store/templates/home/home.html
@@ -10,7 +10,6 @@
     <title>WEBSITE</title>
 </head>
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <a class="navbar-brand text-white" href="#">MyPortfolio.Com</a>
         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,14 +32,24 @@
         
     </nav>
     <div class="bg-image" style="background-image: url('../../../static/images/background.jpg');">
-        <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="d-flex justify-content-center align-items-center h-100 pl-2 pr-2">
             <div class=" text-white">
               <h1 class="mb-3">Hi I'm Manav Chauhan</h1>
               <h5 class="mb-4">A computer science student passionate about programming and design.</h5>
               <a class="btn btn-outline-light btn-lg m-2">My Projects</a>
               <a class="btn btn-outline-light btn-lg m-2">Contact Me</a>
+            </div>
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <div class="about">
+      <div class="d-flex justify-content-center align-items-center pl-2 pr-2">
+        <h1 class="mt-3">About Me</h1>
+      </div>
+      <div class="justify-content-center text-justify pl-5 pr-5 pt-3">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste eveniet exercitationem odio neque commodi facilis itaque repudiandae optio, dolorum iusto sint magnam perferendis inventore! Iste magni animi dolorem, quis, eius officia, cum alias debitis aliquid obcaecati est quia doloremque blanditiis nulla doloribus eum quasi praesentium. Omnis, ratione eaque? Recusandae, nihil!
+      </div>
+    </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
