--- a/store/templates/home/home.html
+++ b/store/templates/home/home.html
@@ -31,7 +31,7 @@
           <form class="form-inline text-right">
             <button class="btn btn-primary btn-outline-light mr-2 " type="button">Sign Up</button>
             <button class="btn btn-primary btn-outline-light" type="button">Log In</button>
-        </form>
+          </form>
         </div>
         
     </nav>
@@ -56,6 +56,10 @@
     <section class="myprojects" id="Projects">
       <div class="container">
         <h1 class="section-heading"> My Projects </h1>
+        <form class="form-inline text-right justify-content-end">
+          <button class="btn btn-primary btn-outline-light mr-2 mb-2" type="button">Add Project</button>
+          <button class="btn btn-primary btn-outline-light mb-2" type="button">Delete Project</button>
+        </form>
         <div class="slider">
           <button class="slider-btn slick-prev"><img src="../../../static/images/icons/prev.svg" alt=""></button>
           <button class="slider-btn slick-next"><img src="../../../static/images/icons/next.svg" alt=""></button>
@@ -66,7 +70,7 @@
               </div>
               <hr>
               <div>
-                <h3><a class="text-center" href="#">Face Mask Detection</a></h3>
+                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection</a></h3>
               </div>
             </div>
             <div class="project-card">
@@ -75,7 +79,7 @@
               </div>
               <hr>
               <div>
-                <h3><a class="text-center" href="#">Face Mask Detection</a></h3>
+                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection</a></h3>
               </div>
             </div>
             <div class="project-card">
@@ -84,7 +88,7 @@
               </div>
               <hr>
               <div>
-                <h3><a class="text-center" href="#">Face Mask Detection</a></h3>
+                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection</a></h3>
               </div>
             </div>
             <div class="project-card">
@@ -93,7 +97,7 @@
               </div>
               <hr>
               <div>
-                <h3><a class="text-center" href="#">Face Mask Detection 2</a></h3>
+                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection 2</a></h3>
               </div>
             </div>
             <div class="project-card">
@@ -102,7 +106,7 @@
               </div>
               <hr>
               <div>
-                <h3><a class="text-center" href="#">Face Mask Detection 2</a></h3>
+                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection 2</a></h3>
               </div>
             </div>
             <div class="project-card">
@@ -111,7 +115,7 @@
               </div>
               <hr>
               <div>
-                <h3><a href="#">Face Mask Detection 2</a></h3>
+                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection 2</a></h3>
               </div>
             </div>
           </div>
