--- a/store/templates/home/home.html
+++ b/store/templates/home/home.html
@@ -57,65 +57,70 @@
       <div class="container">
         <h1 class="section-heading"> My Projects </h1>
         <form class="form-inline text-right justify-content-end">
-          <button class="btn btn-primary btn-outline-light mr-2 mb-2" type="button">Add Project</button>
+          <button class="btn btn-primary btn-outline-light mr-2 mb-2" data-toggle="modal" data-target="#" id= "addcard" type="button">Add Project</button>
           <button class="btn btn-primary btn-outline-light mb-2" type="button">Delete Project</button>
         </form>
+        <!-- MODAL -->
+        
+        
+
+        <!-- MODAL -->
         <div class="slider">
           <button class="slider-btn slick-prev"><img src="../../../static/images/icons/prev.svg" alt=""></button>
           <button class="slider-btn slick-next"><img src="../../../static/images/icons/next.svg" alt=""></button>
           <div class="project-slider">
             <div class="project-card">
-              <div class="project-image d-flex justify-content-center align-items-center">
-                <img src="../../../static/images/background.jpg" alt="">
+              <div class="project-image d-flex justify-content-center align-items-center pb-2 pt-2">
+                <img src="../../../static/images/project 1.jpg" alt="">
               </div>
               <hr>
               <div>
-                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection</a></h3>
+                <h3><a class="text-center text-decoration-none" href="https://github.com/manavchauhan18/WEBSITE-USING-DJANGO">Website Using Django</a></h3>
               </div>
             </div>
             <div class="project-card">
-              <div class="project-image d-flex justify-content-center align-items-center">
-                <img src="../../../static/images/background.jpg" alt="">
+              <div class="project-image d-flex justify-content-center align-items-center pb-2 pt-2">
+                <img src="../../../static/images/project2.jpg" alt="">
               </div>
               <hr>
               <div>
-                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection</a></h3>
+                <h3><a class="text-center text-decoration-none" href="https://github.com/manavchauhan18/FaceMaskDetection_UsingMobileNetV2">Face Mask Detection</a></h3>
               </div>
             </div>
             <div class="project-card">
-              <div class="project-image d-flex justify-content-center align-items-center">
-                <img src="../../../static/images/background.jpg" alt="">
+              <div class="project-image d-flex justify-content-center align-items-center pb-2 pt-2">
+                <img src="../../../static/images/BFS-vs-DFS.jpg" alt="">
               </div>
               <hr>
               <div>
-                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection</a></h3>
+                <h3><a class="text-center text-decoration-none" href="https://github.com/manavchauhan18/DFS-BFS">BFS and DFS</a></h3>
               </div>
             </div>
             <div class="project-card">
-              <div class="project-image d-flex justify-content-center align-items-center">
-                <img src="../../../static/images/background.jpg" alt="">
+              <div class="project-image d-flex justify-content-center align-items-center pb-2 pt-2">
+                <img src="../../../static/images/tic-tac-toe.png" alt="">
               </div>
               <hr>
               <div>
-                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection 2</a></h3>
+                <h3><a class="text-center text-decoration-none" href="https://github.com/manavchauhan18/Tic-Tac-Toe">Tic-Tac-Toe</a></h3>
               </div>
             </div>
             <div class="project-card">
-              <div class="project-image d-flex justify-content-center align-items-center">
-                <img src="../../../static/images/background.jpg" alt="">
+              <div class="project-image d-flex justify-content-center align-items-center pb-2 pt-2">
+                <img src="../../../static/images/calculator.png" alt="">
               </div>
               <hr>
               <div>
-                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection 2</a></h3>
+                <h3><a class="text-center text-decoration-none" href="https://github.com/manavchauhan18/CALCULATOR">Calculator using python</a></h3>
               </div>
             </div>
             <div class="project-card">
-              <div class="project-image d-flex justify-content-center align-items-center">
-                <img src="../../../static/images/background.jpg" alt="">
+              <div class="project-image d-flex justify-content-center align-items-center pb-2 pt-2">
+                <img src="../../../static/images/snake.png" alt="">
               </div>
               <hr>
               <div>
-                <h3><a class="text-center text-decoration-none" href="#">Face Mask Detection 2</a></h3>
+                <h3><a class="text-center text-decoration-none" href="https://github.com/manavchauhan18/Snake-game-using-Pygame">Snake Using Python</a></h3>
               </div>
             </div>
           </div>
