--- a/static/css/main.css
+++ b/static/css/main.css
@@ -117,3 +117,56 @@ hr {
 .h3, h3 {
     text-align: center;
 }
+
+.skill-list img {
+    height: 100px;
+    width: 100px;
+}
+
+.skill-list img:hover {
+    transition: 0.5s;
+    transform: scale(1.5);
+}
+
+.skills h1 {
+    color: #4C5357;
+    margin-bottom: 1.5rem;
+}
+
+.contact-us h1 {
+    color: #4C5357;
+}
+
+.contact-us {
+    margin-top: 4rem;
+    background: #F0F0F0;
+}
+
+@media(max-width: 500px) {
+    .skill-list {
+        display: block !important; 
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+}
+
+.top {
+    padding-top: 20px;
+    padding-bottom: 100px
+}
+
+
+.form {
+    background-color: white !important;
+    padding: 20px;
+    border-radius: 0.4rem;
+}
+
+.form-group {
+    margin-bottom: 20px
+}
+
+.sr-only {
+    position: absolute;
+}
