--- a/static/css/main.css
+++ b/static/css/main.css
@@ -144,10 +144,9 @@ hr {
 
 @media(max-width: 500px) {
     .skill-list {
-        display: block !important; 
         margin-left: auto;
         margin-right: auto;
-        width: 100%;
+        flex-wrap: wrap;
     }
 }
 
