completed slickAdd function

--- a/store/templates/home/home.html
+++ b/store/templates/home/home.html
@@ -42,7 +42,7 @@
               <h1 class="mb-3">Hi I'm Manav Chauhan</h1>
               <h5 class="mb-4">A computer science student passionate about programming and design.</h5>
               <a class="btn btn-outline-light btn-lg m-2" href="#Projects">My Projects</a>
-              <a class="btn btn-outline-light btn-lg m-2">Contact Me</a>
+              <a class="btn btn-outline-light btn-lg m-2" href="#ContactMe">Contact Me</a>
             </div>
         </div>
     </div>
